<resources>
    <string name="app_name">iTutor</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar</string>
    <string name="action_sign_in_short">Iniciar</string>
    <string name="error_invalid_email">Esta dirección de correo es inválida</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">Menú</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Opciones</string>
    <string name="title_activity_profile">Mi Perfil</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="nav_profile">Mi Perfil</string>
    <string name="nav_teachers">Mis profesores</string>
    <string name="nav_search">Buscar</string>
    <string name="acc_email">E-mail</string>
    <string name="hint_email">Inserta aqui tu email</string>
    <string name="acc_name">Nombre</string>
    <string name="acc_phone">Telefono</string>
    <string name="acc_quote">Descripcion</string>
    <string name="hint_quote">Inserta aqui una descripcion</string>
    <string name="hint_phone">Inserta aqui tu telefono</string>
    <string name="hint_name">Inserta aqui tu nombre</string>
    <string name="delete">Eliminar</string>
    <string name="skills">Materias</string>
    <string name="saveChanges">Guardar Cambios</string>
    <string name="call">Llamar</string>
    <string name="filter_skill">Materia</string>
    <string name="max_distance">Distancia máxima</string>
    <string name="action_sign_new">Registrar</string>
    <string name="add_skill_img">Add_Skill_IMG</string>
    <string name="rating_minimo">Rating mínimo</string>
    <string name="limpiar_filtros">Limpiar Filtros</string>
    <string name="aplicar_filtros">Aplicar Filtros</string>
    <string name="votar">Votar</string>

    <string-array name="list_academy">
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Bachiller</item>
        <item>Universitario</item>
    </string-array>
</resources>
