<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidDomInspection -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    tools:context=".ProfileFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="77dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/SkillsList" />

        <View
            android:id="@+id/view5"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/levelTextView" />

        <View
            android:id="@+id/view4"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mailTextView" />

        <RatingBar
            android:id="@+id/voteRating"
            style="?attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/spinner"
            android:layout_alignParentTop="true"
            android:layout_marginTop="11dp"
            android:isIndicator="true"
            android:numStars="5" />

        <ListView
            android:id="@+id/SkillsList"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/skillTextView"
            android:divider="@android:color/holo_orange_light"
            android:entries="@array/pref_example_list_titles"
            android:scrollbars="vertical"
            tools:ignore="NestedScrolling" />

        <TextView
            android:id="@+id/mailTextView"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_below="@+id/view2"
            android:layout_toEndOf="@+id/levelTextView"
            android:ems="10"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="120dp"
            android:layout_height="19dp"
            android:layout_alignStart="@+id/mailTextView"
            android:layout_alignTop="@+id/phoneImgView"
            android:ems="10"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/quoteTextView"
            android:layout_width="196dp"
            android:layout_height="70dp"
            android:layout_alignStart="@+id/nameTextView"
            android:layout_below="@+id/voteRating"
            android:ems="10"
            android:text="@string/acc_quote"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/skillTextView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/blankSpaceQuoteSkill"
            android:text="@string/skills"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/voteRating"
            android:layout_toEndOf="@+id/profilePicView"
            android:ems="10"
            android:text="@string/acc_name"
            android:textSize="12sp" />

        <View
            android:id="@+id/blankSpaceQuoteSkill"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/profesionalCheck"
            android:background="@android:color/transparent" />

        <ImageButton
            android:id="@+id/votesInfo"
            android:layout_width="44dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/quoteTextView"
            android:background="@color/colorWhiteTransparent"
            android:cropToPadding="false"
            android:src="@android:drawable/ic_dialog_info"
            android:tint="@color/colorPrimaryDark"
            android:contentDescription="Informacion extra"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/profilePicView"
            android:layout_width="117dp"
            android:layout_height="104dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:background="@android:drawable/picture_frame"
            android:cropToPadding="true"
            android:src="@android:drawable/alert_dark_frame"
            android:contentDescription="Foto de perfil"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/view"
            android:text="Precio:"
            tools:text="Precio: "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/price2TextView"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/priceTextView"
            android:layout_toEndOf="@+id/priceTextView"
            android:ems="10"
            android:singleLine="true"
            android:textSize="12sp" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/profilePicView" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/priceTextView" />

        <TextView
            android:id="@+id/levelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/view3"
            android:text="Nivel"
            tools:ignore="HardcodedText" />

        <CheckBox
            android:id="@+id/basicCheck"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/view5"
            android:checked="false"
            android:clickable="false"
            android:text="Basico"
            tools:ignore="HardcodedText" />

        <CheckBox
            android:id="@+id/midCheck"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_alignStart="@+id/basicCheck"
            android:layout_below="@+id/basicCheck"
            android:checked="false"
            android:clickable="false"
            android:text="Medio"
            tools:ignore="HardcodedText" />

        <CheckBox
            android:id="@+id/advancedCheck"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/midCheck"
            android:checked="false"
            android:clickable="false"
            android:text="Avanzado"
            tools:ignore="HardcodedText" />

        <CheckBox
            android:id="@+id/profesionalCheck"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/advancedCheck"
            android:checked="false"
            android:clickable="false"
            android:text="Profesional"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/academyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/spinner"
            android:layout_alignTop="@+id/levelTextView"
            android:text="Formacion"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/spinner"
            android:layout_width="191dp"
            android:layout_height="18dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/basicCheck"
            android:text="Primaria"
            tools:ignore="HardcodedText" />

        <View
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/phoneTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/priceTextView"
            android:layout_toEndOf="@+id/price2TextView"
            android:text="euros por hora"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/mailImgView"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/mailTextView"
            app:srcCompat="@drawable/ic_menu_send"
            android:contentDescription="Enviar email"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/phoneImgView"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/view4"
            android:src="@android:drawable/sym_action_call"
            android:contentDescription="Llamar"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/voteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/SkillsList"
            android:layout_marginStart="130dp"
            android:text="Valorame"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/isFavouriteView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/mailTextView"
            android:layout_toEndOf="@+id/quoteTextView"
            android:background="@android:color/transparent"
            android:src="@android:drawable/btn_star_big_off"
            android:contentDescription="Favorito"
            tools:ignore="HardcodedText" />

    </RelativeLayout>
</ScrollView>